Les fonctions de ItemStackUtil renvoient l'objet modifiés